--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,11 @@
 FROM node:alpine
 
-WORKDIR ./app
-
 COPY ./package.json /app
+
+WORKDIR /app
+
 RUN npm install 
 
-COPY . ./app
+COPY . .
 
 CMD ["npm", "run", "start"]
