--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t schengatto/angular-task-manager:latest -f Dockerfile.dev .
 
 script:
-    - docker run schengatto/angular-task-manager:latest
+    - docker run schengatto/angular-task-manager:latest npm run start
